[package]
name = "cocube-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "CoCube UDP client"
authors = ["Liangdi <wu@liangdi.me>"]
repository = "https://github.com/404digital/cocube-rs"

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
